Fixed button and collapse clicks and added higlighted rows to My Project List

--- a/src/app/setups/projects/projects.component.css
+++ b/src/app/setups/projects/projects.component.css
@@ -21,10 +21,20 @@
     color: black;
   }
 
-  .card-header {
+  /* .card-header tr.active{
     background-color: white;
+  } */
+
+  .table tr.active td {
+    background-color:#485b65 !important;
+    color: white;
+  }
+
+  .main-card-body {
+    background-color:#485b65 !important;
   }
 
   .card-body:hover {
     background: white;
   }
+
